# mnemnk-slack

./: .env.sample  .gitignore  LICENSE_APACHE-2.0  LICENSE_MIT  README.md  mnemnk.json  pyproject.toml
src/mnemnk_slack/: __init__.py  listen.py  post.py
